--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,30 @@
+body {
+  background-color: rgb(60, 122, 137);
+  color: rgb(60, 21, 59);
+}
+
 .App {
   text-align: center;
+  margin: 0 auto;
+  border: 4px solid palevioletred;
+  border-radius: 10px;
+  max-width: 750px;
+  max-height: 750px;
+  background-color: rgb(244, 250, 255);
+}
+
+.Weather .search {
+  margin: 3em 2em 0 2em;
+  padding: 10px;
+  border: 2px solid palevioletred;
+  border-radius: 15px;
+}
+
+.Coded {
+  font-size: 13px;
+  text-align: right;
+  margin: 10px;
+  padding-right: 10px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -9,14 +34,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  font-size: calc(8px + 1.5vmin);
 }
 
 /* @keyframes App-logo-spin {
